Create TrackerFragment, track user location, send locations to Firestore db, delete factories for Login and Registration, repackage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,17 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
+    //Work Manager
+    implementation "androidx.work:work-runtime:2.7.1"
+
+    //Google Play Services
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:21.0.2'
-    implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.google.firebase:firebase-firestore:24.1.0'
+    implementation 'com.google.firebase:firebase-core:20.1.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
 
     //RxJava, RxAndroid
     implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
