--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 
+    implementation "androidx.core:core:1.7.0"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -45,9 +46,6 @@ dependencies {
     def nav_version = "2.4.1"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
-
-    //Work Manager
-    implementation "androidx.work:work-runtime:2.7.1"
 
     //Google Play Services
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
