--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,13 @@ android {
 
 dependencies {
 
+    //AndroidX
     implementation "androidx.core:core:1.7.0"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Navigation component
     def nav_version = "2.4.2"
