--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
     implementation "androidx.room:room-rxjava3:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    //WorkManager
+    def work_version = "2.7.1"
+    implementation "androidx.work:work-runtime:$work_version"
+
     //Dagger 2
     def dagger_version = "2.40"
     implementation "com.google.dagger:dagger:$dagger_version"
