--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <service android:name=".services.LocationService"
+        <service
+            android:name=".background.LocationService"
             android:stopWithTask="true" />
 
         <activity
