--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
 
+        buildConfigField "String", "LOCATION_PROVIDER", "\"gps\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
