--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,8 +101,10 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
-    //JUnit
+    //JUnit, Mockito
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
     //Espresso
