--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LocationTrackerA">
+        android:theme="@style/Theme.LocationTracker">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -38,7 +38,9 @@
 
         <activity
             android:name=".ui.MapsActivity"
-            android:exported="true">
+            android:exported="true"
+            android:icon="@drawable/icon_b"
+            android:label="@string/app_name_b">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,7 +49,9 @@
         </activity>
         <activity
             android:name=".ui.TrackerActivity"
-            android:exported="true">
+            android:exported="true"
+            android:icon="@drawable/icon_a"
+            android:label="@string/app_name_a">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
