--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
         <service
             android:name=".background.LocationService"
+            android:foregroundServiceType="location"
             android:stopWithTask="true" />
 
         <receiver
