--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         buildConfigField "int", "TRACKING_SENSIVITY", "60"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
     buildTypes {
@@ -53,6 +54,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+
     buildFeatures {
         viewBinding true
     }
@@ -72,6 +77,7 @@ dependencies {
     def nav_version = "2.4.2"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     //Room
     def room_version = "2.4.2"
@@ -87,6 +93,7 @@ dependencies {
     def dagger_version = "2.40"
     implementation "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 
     //Google Play Services
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
@@ -108,5 +115,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
     //Espresso
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    def espresso_version = "3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    //androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+
+    //Ui testing tools
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestUtil 'androidx.test:orchestrator:1.4.1'
 }
