Implement coroutines and flow in auth

--- a/models/build.gradle
+++ b/models/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     //RxJava
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
 
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
     //Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
