--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,10 +61,11 @@ dependencies {
     implementation project(path: ':models')
     implementation project(path: ':models_impl')
 
+    implementation 'com.google.android.material:material:1.6.1'
+
     //AndroidX
     implementation "androidx.core:core-ktx:1.8.0"
     implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -89,11 +90,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:21.0.5'
+    implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
 
     //RxJava, RxAndroid
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
+    implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     //JUnit, Mockito
     testImplementation 'junit:junit:4.13.2'
