--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 buildscript {
     ext.kotlin_version = '1.5.10'
     ext.room_version = '2.4.2'
+    ext.firebase_auth_version = '21.0.5'
     ext.rxjava_version = '3.1.3'
+    ext.coroutines_version = '1.6.1'
 
     project.ext {
         min = 19
