--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
 
     //RxJava
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
+    implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -74,9 +74,12 @@ dependencies {
     //Google Play Services
     implementation 'com.google.android.gms:play-services-location:20.0.0'
 
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
+
     //Firebase
     implementation 'com.google.firebase:firebase-firestore:24.1.2'
-    implementation 'com.google.firebase:firebase-auth:21.0.5'
+    implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
 
     //JUnit, Mockito
     testImplementation 'junit:junit:4.13.2'
