--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
 
     //AndroidX
-    implementation "androidx.core:core-ktx:1.8.0"
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation "androidx.core:core-ktx:$ktx_core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -100,11 +100,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     //JUnit, Mockito
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.2.4'
-    testImplementation 'org.mockito:mockito-inline:2.8.47'
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_core_version"
+    testImplementation "org.mockito:mockito-inline:$mockito_inline_version"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test.ext:junit:$androidx_test_junit_version"
 
     //Espresso
     def espresso_version = "3.4.0"
