--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ buildscript {
     ext.firebase_auth_version = '21.0.5'
     ext.rxjava_version = '3.1.3'
     ext.coroutines_version = '1.6.1'
+    ext.ktx_core_version = '1.8.0'
+    ext.appcompat_version = '1.4.2'
+    ext.junit_version = '4.13.2'
+    ext.mockito_core_version = '3.2.4'
+    ext.mockito_inline_version = '2.8.47'
+    ext.androidx_test_junit_version = '1.1.3'
 
     project.ext {
         min = 19
