--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -60,8 +60,8 @@ dependencies {
     implementation project(path: ':models')
 
     //AndroidX
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation "androidx.core:core-ktx:$ktx_core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
 
     //RxJava
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
@@ -82,8 +82,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
 
     //JUnit, Mockito
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.2.4'
-    testImplementation 'org.mockito:mockito-inline:2.8.47'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_core_version"
+    testImplementation "org.mockito:mockito-inline:$mockito_inline_version"
+    androidTestImplementation "androidx.test.ext:junit:$androidx_test_junit_version"
 }
