--- a/mvi/build.gradle
+++ b/mvi/build.gradle
@@ -47,8 +47,8 @@ android {
 dependencies {
 
     //Android X
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation "androidx.core:core-ktx:$ktx_core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
 
     //RxJava
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
